--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
   "dependencies": {
     "awilix": "^4.2.6",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "googleapis": "^52.1.0",
     "hull": "^0.13.20",
     "lodash": "^4.17.15",
@@ -79,6 +81,7 @@
     "@babel/runtime": "^7.9.6",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/formidable": "^1.0.31",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/luxon": "^1.24.0",
