Relocated the Github repo & cleaned up deps

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Hull Connector for Google Analytics",
   "main": "src/index.ts",
   "scripts": {
+    "postinstall": "npm run build",
     "build": "run-p --print-label build-src build-dts",
     "build--watch": "onchange 'src/**/*' --initial --kill --delay 1000  -- npm run build",
     "build-dts": "tsc --emitDeclarationOnly",
@@ -24,7 +25,7 @@
     "lint-markdown": "markdownlint --ignore coverage --ignore dist --ignore node_modules '**/*.md' '.**/**/*.md'",
     "ngrok": "ngrok http 8097 --subdomain=hull-googleanalytics",
     "ngrokfree": "ngrok http 8097",
-    "start": "pm2-runtime start ecosystem.config.js",
+    "start": "node dist/index.js",
     "start--dev": "NODE_ENV=development npm run start",
     "start--dev--watch": "NODE_ENV=development npm run start-src--watch",
     "start-src": "babel-node --extensions .js,.jsx,.ts,.tsx --require ./node_modules/dotenv/config ./src/index.ts",
@@ -37,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SMK1085/hull-googleanalytics.git"
+    "url": "git+https://github.com/hull/hull-googleanalytics.git"
   },
   "keywords": [
     "hull",
@@ -48,13 +49,13 @@
   ],
   "author": {
     "name": "Sven Maschek",
-    "url": "https://www.github.com/SMK1085"
+    "url": "https://www.github.com/hull"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SMK1085/hull-googleanalytics/issues"
+    "url": "https://github.com/hull/hull-googleanalytics/issues"
   },
-  "homepage": "https://github.com/SMK1085/hull-googleanalytics#readme",
+  "homepage": "https://github.com/hull/hull-googleanalytics#readme",
   "dependencies": {
     "awilix": "^4.2.6",
     "cors": "^2.8.5",
@@ -66,7 +67,6 @@
     "hull": "^0.13.20",
     "lodash": "^4.17.15",
     "luxon": "^1.24.1",
-    "pm2": "^4.4.0",
     "redis": "^3.0.2",
     "winston": "^3.2.1"
   },
